@startuml DeleteCommandClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml

interface Command {
    +execute(StudentDatabase, Storage): CommandResult
    +undo(StudentDatabase, Storage): CommandResult
    +isUndoable(): boolean
}

class DeleteCommand {
    -index: int
    -deletedStudent: Student
    -deletedIndex: int
    +DeleteCommand(int)
    +execute(StudentDatabase, Storage): CommandResult
    +undo(StudentDatabase, Storage): CommandResult
    +isUndoable(): boolean
}

class StudentDatabase {
    +removeStudent(int): Student
    +addStudent(Student): void
    +getStudentCount(): int
}

class Storage {
    +saveStudentList(StudentDatabase): void
}

class Student {
    +getName(): String
    +toString(): String
}

class CommandResult {
    -message: String
    -exit: boolean
    +getMessage(): String
    +shouldExit(): boolean
}

class CommandException {
    +CommandException(String)
}

Command <|.. DeleteCommand
DeleteCommand ..> StudentDatabase : uses
DeleteCommand ..> Storage : uses
DeleteCommand ..> CommandResult : creates
DeleteCommand ..> CommandException : throws
DeleteCommand --> Student : stores ref
@enduml
